turtleart.kerr40.Kerr40.scala.error
Erreur de compilation :
Kerr40:12: error: not found: value drotie
    drotie(90)
    ^